(library
 (name test)
 (modules test)
 (optional)
 (libraries ez-api.request ez-api.server ez-api.server-session ez-api.session-client))

(executable
 (name main_cohttp)
 (modules main_cohttp)
 (optional)
 (libraries test ezCohttp))

(executable
 (name main_curl)
 (modules main_curl)
 (optional)
 (libraries test ezCurl))

(executable
 (name test_ws)
 (modules test_ws)
 (optional)
 (libraries ez-api.ws-cohttp))
