
(library
 (name ezAPI)
 (public_name ez-api.common)
 (wrapped false)
 (modules stringCompat resto1 ezDebug ezUrl ezAPI)
 (libraries lwt ezEncoding))

(library
 (name ezRequest)
 (public_name ez-api.request)
 (modules ezRequest)
 (libraries ezAPI))

(library
 (name ezRequest_lwt)
 (public_name ez-api.request-lwt)
 (modules ezRequest_lwt)
 (libraries ezAPI))

(library
 (name ezCohttp_base)
 (public_name ez-api.cohttp-base)
 (optional)
 (modules ezCohttp_base)
 (libraries cohttp-lwt))

(library
 (name ezRecaptcha)
 (public_name ez-api.recaptcha)
 (optional)
 (modules ezRecaptcha)
 (libraries ezCurl calendar))
