(library
 (name ppx_common)
 (modules ppx_common)
 (public_name ez-api.ppx-common)
 (libraries ppxlib))

(library
 (name ppx_client)
 (public_name ez-api.ppx-client)
 (modules ppx_client)
 (kind ppx_rewriter)
 (libraries ppx_common)
 (ppx_runtime_libraries ezAPI))

(library
 (name ppx)
 (public_name ez-api.ppx)
 (modules ppx)
 (kind ppx_rewriter)
 (libraries ppx_common)
 (ppx_runtime_libraries ezAPIServerUtils))

(library
 (name ppx_server)
 (public_name ez-api.ppx-server)
 (modules ppx_server)
 (kind ppx_rewriter)
 (libraries ppx_common)
 (ppx_runtime_libraries ezAPIServer))
