(library
 (name ezRequest)
 (public_name ez-api.request)
 (modules ezRequest)
 (libraries ezReq_S))

(library
 (name ezRequest_lwt)
 (public_name ez-api.request-lwt)
 (modules ezRequest_lwt)
 (libraries ezReq_lwt_S))

(library
 (name ezCohttp_base)
 (public_name ez-api.cohttp-base)
 (optional)
 (modules ezCohttp_base)
 (libraries cohttp-lwt))