(library
 (name ezRequest)
 (public_name ez-api.request)
 (modules ezRequest)
 (libraries ezReq_S))

(library
 (name ezRequest_lwt)
 (public_name ez-api.request-lwt)
 (modules ezRequest_lwt)
 (libraries ezReq_lwt_S))

(library
 (name ezCohttp_base)
 (public_name ez-api.cohttp-base)
 (optional)
 (modules ezCohttp_base)
 (libraries cohttp-lwt))

(library
 (name ezReq_default)
 (public_name ez-api.req-default)
 (implements ezReq)
 (modules ezReq)
 (libraries ezRequest))

(library
 (name ezReq_lwt_default)
 (public_name ez-api.req-lwt-default)
 (implements ezReq_lwt)
 (modules ezReq_lwt)
 (libraries ezRequest_lwt))
