(library
 (name ezAPIServerUtils)
 (public_name ez-api.server-utils)
 (optional)
 (modules answer directory gMTime timings ip file ezAPIServerUtils)
 (libraries ezAPI geoip lwt.unix ezjsonm_unix))

(library
 (name ezOpenAPI)
 (public_name ez-api.openAPI)
 (optional)
 (modules ezOpenAPI)
 (libraries ezAPI ezjsonm_unix))

(library
 (name ezAPIServer)
 (public_name ez-api.server)
 (optional)
 (modules ezAPIServer)
 (libraries ezServer))
