(library
 (name ezAPIServerUtils)
 (public_name ez-api.server-utils)
 (optional)
 (modules answer directory gMTime timings file ip ezAPIServerUtils)
 (libraries ezAPI geoip))

(library
 (name ezOpenAPI)
 (public_name ez-api.openAPI)
 (modules ezOpenAPI)
 (libraries ezAPI ezjsonm_unix))

(library
 (name ezAPIServer)
 (public_name ez-api.server)
 (optional)
 (modules ezAPIServer)
 (libraries ezServer))
