(library
 (name ezSession)
 (public_name ez-api.session)
 (modules ezSession)
 (libraries ezAPI))

(library
 (name ezSessionClient)
 (public_name ez-api.session-client)
 (optional)
 (modules ezSessionClient)
 (libraries ezReq ezSession))

(library
 (name ezSessionServer)
 (public_name ez-api.server-session)
 (wrapped false)
 (optional)
 (modules ezCookieServer ezSessionServer)
 (libraries ezSession ezAPIServerUtils cohttp))
