(library
 (name ppx_common)
 (modules ppx_common)
 (public_name ez_api.ppx_common)
 (optional)
 (libraries ppx_compat))

(library
 (name ppx_client)
 (public_name ez_api.ppx_client)
 (optional)
 (modules ppx_client)
 (kind ppx_rewriter)
 (libraries ppx_common)
 (ppx_runtime_libraries ezAPI))

(library
 (name ppx)
 (public_name ez_api.ppx)
 (optional)
 (modules ppx)
 (kind ppx_rewriter)
 (libraries ppx_common)
 (ppx_runtime_libraries ezAPIServerUtils))

(library
 (name ppx_server)
 (public_name ez_api.ppx_server)
 (optional)
 (modules ppx_server)
 (kind ppx_rewriter)
 (libraries ppx_common)
 (ppx_runtime_libraries ezAPIServer))

(library
 (name ppx_deriving_err_case)
 (public_name ez_api.ppx_err_case)
 (optional)
 (modules ppx_deriving_err_case)
 (kind ppx_deriver)
 (libraries ppx_deriving_encoding.lib))
