(library
 (name verbose)
 (public_name ez_api.request_verbose)
 (modules verbose))

(library
 (name ezRequest)
 (public_name ez_api.request)
 (modules ezRequest)
 (libraries ezReq_S))

(library
 (name ezRequest_lwt)
 (public_name ez_api.request_lwt)
 (modules ezRequest_lwt)
 (libraries ezReq_lwt_S))

(library
 (name ezCohttp_base)
 (public_name ez_api.cohttp_base)
 (optional)
 (modules ezCohttp_base)
 (libraries verbose ezAPI cohttp-lwt))
