(library
 (name ezAPIServerUtils)
 (public_name ez_api.server_utils)
 (modules answer directory gMTime timings file ip ezAPIServerUtils)
 (libraries ezAPI
  (select ip.ml from
   (geoip -> ip.geoip.ml)
   (-> ip.dummy.ml))))

(library
 (name server_common)
 (modules server_common)
 (optional)
 (package ez_api)
 (libraries ezAPIServerUtils lwt.unix bigstringaf)
 (foreign_stubs (language c) (names rlimit_no_file)))

(library
 (name ezOpenAPI)
 (public_name ez_api.openAPI)
 (modules ezOpenAPI)
 (libraries ezAPI ezYaml ezjsonm))

(library
 (name ezAPIServer)
 (public_name ez_api.server)
 (modules ezAPIServer)
 (libraries ezServer))
