(library
 (name server_utils)
 (package ez_api)
 (modules answer cors gMTime timings ip log dir_types)
 (wrapped false)
 (libraries unix ezAPI
  (select ip.ml from
   (geoip -> ip.geoip.ml)
   (-> ip.dummy.ml))))

(library
 (name httpunaf)
 (package ez_api)
 (modules httpunaf)
 (libraries server_utils))

(library
 (name ezOpenAPI)
 (public_name ez_api.openAPI)
 (optional)
 (modules ezOpenAPI)
 (libraries ezAPI ezYaml ezjsonm))

(library
 (name ezAPIServer)
 (optional)
 (public_name ez_api.server)
 (modules ezAPIServer)
 (libraries ezServer))

(library
 (name ezAPIServerEio)
 (optional)
 (public_name ez_api.server_eio)
 (modules ezAPIServerEio)
 (libraries ezServerEio))
