(library
 (name test_ppx_lib)
 (modules test_ppx_lib)
 (preprocess (pps ez-api.ppx)))

(executable
 (name test_ppx_server)
 (modules test_ppx_server)
 (preprocess (pps ez-api.ppx-server))
 (libraries test_ppx_lib))

(executable
 (name test_ppx_client)
 (modules test_ppx_client)
 (libraries test_ppx_lib ez-api.ixhr-lwt)
 (modes js))
