(library
 (name test_ppx_lib)
 (modules test_ppx_lib)
 (preprocess (pps ez_api.ppx ppx_deriving_encoding)))

(executable
 (name test_ppx_server)
 (modules test_ppx_server)
 (preprocess (pps ez_api.ppx_server))
 (libraries test_ppx_lib))

(executable
 (name test_ppx_client)
 (modules test_ppx_client)
 (libraries test_ppx_lib ez_api.ixhr_lwt)
 (modes js))

(library
 (name test_ppx_err_case)
 (modules test_ppx_err_case)
 (preprocess (pps ez_api.ppx ez_api.ppx_err_case)))
