(library
 (name test_session_lib)
 (modules test_session_lib)
 (libraries ez_api.session))

(executable
 (name test_cookie_client)
 (modules test_cookie_client)
 (preprocess (pps js_of_ocaml-ppx))
 (libraries test_session_lib ez_api.session_client
  (select test_cookie_client.ml from
   (ez_api.coxhr -> test_cookie_client.real.ml)
   (-> test_cookie_client.dummy.ml)))
 (modes js)
 (js_of_ocaml (flags (:standard --no-sourcemap))))

(executable
 (name test_cookie_server)
 (modules test_cookie_server)
 (libraries test_session_lib ez_api.server_session ez_api.server))
