(library
 (public_name ez-api.js-json)
 (name js_json)
 (optional)
 (modules js_json)
 (libraries json-data-encoding js_of_ocaml))

(library
 (public_name ez-api.ezjsonm-js)
 (name ezjsonm_js)
 (optional)
 (implements ezjsonm_interface)
 (preprocess (pps js_of_ocaml-ppx))
 (modules ezjsonm_interface)
 (libraries js_json))
