(library
 (name ezReq_default)
 (public_name ez-api.req-default)
 (implements ezReq)
 (modules ezReq)
 (libraries
  (select ezReq.ml from
   (ezCohttp -> ezReq.cohttp.ml)
   (ezCurl -> ezReq.curl.ml)
   (ezXhr -> ezReq.xhr.ml)
   (-> ezReq.dummy.ml))))

(library
 (name ezReq_lwt_default)
 (public_name ez-api.req-lwt-default)
 (implements ezReq_lwt)
 (modules ezReq_lwt)
 (libraries
  (select ezReq_lwt.ml from
   (ezCohttp_lwt -> ezReq_lwt.cohttp.ml)
   (ezCurl_lwt -> ezReq_lwt.curl.ml)
   (ezXhr_lwt -> ezReq_lwt.xhr.ml)
   (-> ezReq_lwt.dummy.ml))))
