(library
 (name ezXhr)
 (public_name ez-api.xhr)
 (optional)
 (modules ezXhr)
 (preprocess (pps js_of_ocaml-ppx))
 (libraries ezRequest ezAPIJS)
 (modes byte))

(library
 (name ezXhr_lwt)
 (public_name ez-api.xhr-lwt)
 (optional)
 (modules ezXhr_lwt)
 (preprocess (pps js_of_ocaml-ppx))
 (libraries ezRequest_lwt js_of_ocaml-lwt ezAPIJS)
 (modes byte))

(library
 (name ezCoXhr_lwt)
 (public_name ez-api.coxhr-lwt)
 (optional)
 (modules ezCoXhr_lwt)
 (preprocess (pps js_of_ocaml-ppx))
 (libraries ezRequest_lwt ezCohttp_base cohttp-lwt-jsoo ezAPIJS)
 (modes byte))

(library
 (name ezCoXhr)
 (public_name ez-api.coxhr)
 (optional)
 (modules ezCoXhr)
 (preprocess (pps js_of_ocaml-ppx))
 (libraries ezRequest ezCohttp_base cohttp-lwt-jsoo ezAPIJS)
 (modes byte))

(library
 (name ezFetch)
 (public_name ez-api.fetch)
 (optional)
 (modules ezFetch)
 (preprocess (pps js_of_ocaml-ppx))
 (libraries ezRequest ezjs_fetch ezAPIJS)
 (modes byte))

(library
 (name ezFetch_lwt)
 (public_name ez-api.fetch-lwt)
 (optional)
 (modules ezFetch_lwt)
 (preprocess (pps js_of_ocaml-ppx))
 (libraries ezRequest_lwt ezjs_fetch.lwt ezAPIJS)
 (modes byte))
