(library
 (name ezAPIServerCohttp)
 (public_name ez-api.server-cohttp)
 (optional)
 (modules ws ezAPIServerCohttp)
 (libraries cohttp-lwt-unix websocket-lwt-unix.cohttp calendar ezAPIServerUtils))

(library
 (name ezServerCohttp)
 (public_name ez-api.iserver-cohttp)
 (optional)
 (implements ezServer)
 (modules ezServer)
 (libraries ezAPIServerCohttp))
