(library
 (name ezAPIServerCohttp)
 (public_name ez-api.server-cohttp)
 (optional)
 (modules ezAPIServerCohttp)
 (libraries cohttp-lwt-unix wsCohttp))

(library
 (name ezServerCohttp)
 (public_name ez-api.iserver-cohttp)
 (optional)
 (implements ezServer)
 (modules ezServer)
 (libraries ezAPIServerCohttp))
