(library
 (name ezSendgrid_encoding)
 (public_name ez-api.sendgrid-encoding)
 (wrapped false)
 (optional)
 (modules ezSendgrid_types ezSendgrid_encoding)
 (libraries ezEncoding))

(library
 (name ezSendgrid_services)
 (public_name ez-api.sendgrid-services)
 (optional)
 (modules ezSendgrid_services)
 (libraries ezAPI ezSendgrid_encoding))

(library
 (name ezSendgrid)
 (public_name ez-api.sendgrid)
 (wrapped false)
 (optional)
 (modules ezSendgrid)
 (libraries ezRequest_lwt calendar ezSendgrid_services))
