(library
 (name ezDebug_unix)
 (public_name ez_api.debug_unix)
 (modules ezDebug)
 (implements ezDebug))

(library
 (name ezLwtSys_unix)
 (public_name ez_api.lwt_unix)
 (modules ezLwtSys)
 (implements ezLwtSys)
 (libraries
  (select ezLwtSys.ml from
   (lwt.unix -> ezLwtSys.lwt.ml)
   (-> ezLwtSys.dummy.ml))))
