(library
 (name ezServerDefault)
 (public_name ez_api.iserver_default)
 (implements ezServer)
 (modules ezServer)
 (libraries
  (select ezServer.ml from
   (ezAPIServerHttpun -> ezServer.httpun.ml)
   (ezAPIServerHttpAf -> ezServer.httpaf.ml)
   (ezAPIServerCohttp -> ezServer.cohttp.ml)
   (-> ezServer.dummy.ml))))
