(library
 (name file_lwt)
 (package ez_api)
 (optional)
 (modules file_lwt)
 (libraries log_lwt))

(library
 (name file_eio)
 (package ez_api)
 (optional)
 (modules file_eio)
 (libraries server_utils eio log_eio))

(executable
 (name file_server)
 (public_name ezserve)
 (modules file_server_arg file_server)
 (libraries
  (select file_server.ml from
   (ezAPIServerEio eio_main -> file_server.eio.ml)
   (ezAPIServer lwt.unix -> file_server.lwt.ml)
   (-> file_server.dummy.ml))))
