(library
 (name ezAPIServerHttpAf)
 (public_name ez_api.server_httpaf)
 (optional)
 (modules ezAPIServerHttpAf)
 (libraries httpaf-lwt-unix wsHttpaf lwt_httpunaf))

(library
 (name ezServerHttpaf)
 (public_name ez_api.iserver_httpaf)
 (optional)
 (implements ezServer)
 (modules ezServer)
 (libraries ezAPIServerHttpAf))
